--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ android {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
@@ -61,7 +61,5 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     compile 'com.github.clans:fab:1.6.1'
-
-
-
+    compile project(':sound')
 }
